fix: getFirst로 변경